<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".leagueChooser">

  <ImageView
      android:id="@+id/imageView3"
      android:layout_width="0dp"
      android:layout_height="0dp"
      android:scaleType="centerCrop"
      android:src="@drawable/desiredleaguebg"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="0.0"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent"
      app:layout_constraintVertical_bias="0.0"
      android:contentDescription="@string/background" />

  <TextView
      android:id="@+id/textView3"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginTop="32dp"
      android:fontFamily="@font/montserrat_subrayada"
      android:text="@string/choose_your_league"
      android:textColor="#FFFFFF"
      android:textSize="20sp"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/imageView2" />

  <ImageView
      android:id="@+id/imageView2"
      android:layout_width="130dp"
      android:layout_height="50dp"
      android:layout_marginTop="32dp"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent"
      app:srcCompat="@drawable/swooshlogo"
      android:contentDescription="@string/logo" />

  <ToggleButton
      android:id="@+id/menBtn"
      android:layout_width="250dp"
      android:layout_height="wrap_content"
      android:layout_marginTop="16dp"
      android:background="@drawable/btn_toggle"
      android:text="@string/men"
      android:textColor="#FAFAFA"
      android:textOff="@string/men"
      android:textOn="@string/men"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/textView3" />

  <ToggleButton
      android:id="@+id/womenBtn"
      android:layout_width="250dp"
      android:layout_height="wrap_content"
      android:layout_marginTop="16dp"
      android:background="@drawable/btn_toggle"
      android:text="@string/togglebutton"
      android:textColor="#FAFAFA"
      android:textOff="@string/women"
      android:textOn="@string/women"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/menBtn" />

  <ToggleButton
      android:id="@+id/ufoBtn"
      android:layout_width="250dp"
      android:layout_height="wrap_content"
      android:layout_marginTop="16dp"
      android:background="@drawable/btn_toggle"
      android:text="@string/ufo"
      android:textColor="#FAFAFA"
      android:textOff="@string/ufo"
      android:textOn="@string/ufo"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/womenBtn" />

  <Button
      android:id="@+id/nxtBtn"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:layout_marginBottom="32dp"
      android:background="@drawable/nice_btn"
      android:text="@string/next"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="0.0"
      app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>