<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Skill">

  <ImageView
      android:id="@+id/imageView4"
      android:layout_width="0dp"
      android:layout_height="0dp"
      android:scaleType="centerCrop"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="1.0"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent"
      app:layout_constraintVertical_bias="0.0"
      app:srcCompat="@drawable/desiredleaguebg" />

  <ImageView
      android:id="@+id/imageView2"
      android:layout_width="130dp"
      android:layout_height="50dp"
      android:layout_marginTop="32dp"
      android:contentDescription="@string/logo"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent"
      app:srcCompat="@drawable/swooshlogo" />

  <TextView
      android:id="@+id/textView4"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginTop="32dp"
      android:fontFamily="@font/montserrat_subrayada"
      android:text="@string/what_level_r_u"
      android:textColor="#FFFFFF"
      android:textSize="24sp"
      android:textStyle="bold"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/imageView2" />

  <LinearLayout
      android:layout_width="0dp"
      android:layout_height="42dp"
      android:layout_marginTop="32dp"
      android:orientation="horizontal"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/textView4">

    <ToggleButton
        android:id="@+id/begginerBtn"
        android:layout_width="40dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:background="@drawable/btn_toggle"
        android:text="@string/begginer"
        android:textColor="#FFFFFF"
        android:textOff="@string/begginer"
        android:textOn="@string/begginer" />

    <ToggleButton
        android:id="@+id/proBtn"
        android:layout_width="40dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:background="@drawable/btn_toggle"
        android:text="@string/pro"
        android:textColor="#FFFFFF"
        android:textOff="@string/pro"
        android:textOn="@string/pro"/>
  </LinearLayout>

  <Button
      android:id="@+id/bb"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:layout_marginBottom="32dp"
      android:background="#332E2E"
      android:backgroundTint="#393232"
      android:text="@string/next"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>